<resources>
    <string name="app_name">Stevie</string>
    <string name="menuPrincipal">Menu Principal</string>

    <string name="btnOpcao1">Localizaçãoo Atual</string>
    <string name="btnOpcao2">Identificar Objetos Proximos</string>
    <string name="btnOpcao3">Escolher um Destino</string>
    <string name="btnOpcao4">Escolher um Objeto</string>
    <string name="btnVoltar">Voltar ao menu principal</string>
    <string name="btnOpcao5">Escolher Sala de Aula</string>
    <string name="btnOpcao6">Escolher Departamento</string>
    <string name="btnOpcao7">Escolher Laboratório</string>
    <string name="btnOpcao8">Escolher Banheiro</string>

    <string name="menuAjuda">Menu de Ajuda</string>
    <string name="mnAjuda">Ajuda</string>
    <string name="objetivo">Objetivo do Aplicativo</string>
    <string name="comoUtilizar">Como Utilizar o aplicativo</string>
    <string name="sobre">Sobre o aplicativo</string>
    <string name="Voltar">Voltar</string>
    <string name="btnAjuda">Menu de Ajuda</string>
    <string name="menuDestino">Menu "Escolher Destino"</string>
</resources>
