<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubMenuActivity"
    android:background="@color/azulPiscina">

    <ImageView
        android:id="@+id/btnOpcao8"
        android:layout_width="123.53dp"
        android:layout_height="124.81dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/btnOpcao8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOpcao6"
        app:srcCompat="@drawable/ic_localizacao" />

    <ImageView
        android:id="@+id/btnOpcao7"
        android:layout_width="123.53dp"
        android:layout_height="124.81dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/btnOpcao7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOpcao5"
        app:srcCompat="@drawable/ic_localizacao" />

    <ImageView
        android:id="@+id/btnOpcao5"
        android:layout_width="123.53dp"
        android:layout_height="124.81dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="104dp"
        android:contentDescription="@string/btnOpcao5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_localizacao" />

    <ImageView
        android:id="@+id/btnOpcao6"
        android:layout_width="123.53dp"
        android:layout_height="124.81dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/btnOpcao6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_localizacao" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="96dp"
        android:contentDescription="@string/btnVoltar"
        android:text="@string/Voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOpcao8"
        app:layout_constraintVertical_bias="0.477" />
</android.support.constraint.ConstraintLayout>