<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/azulPiscina">

    <ImageView
        android:id="@+id/btnOpcao1"
        android:layout_width="123.53dp"
        android:layout_height="124.81dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="140dp"
        android:contentDescription="@string/btnOpcao1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_localizacao" />

    <ImageView
        android:id="@+id/btnOpcao3"
        android:layout_width="123.53dp"
        android:layout_height="124.81dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/btnOpcao3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOpcao1"
        app:srcCompat="@drawable/ic_destino" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="123.53dp"
        android:layout_height="124.81dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="68dp"
        android:contentDescription="@string/btnOpcao4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOpcao2"
        app:srcCompat="@drawable/ic_lupa" />

    <ImageView
        android:id="@+id/btnOpcao2"
        android:layout_width="123.53dp"
        android:layout_height="124.81dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="68dp"
        android:contentDescription="@string/btnOpcao2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_objetos" />

    <ImageView
        android:id="@+id/btnAjuda"
        android:layout_width="54dp"
        android:layout_height="51dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/btnAjuda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_ajuda"/>


</android.support.constraint.ConstraintLayout>